# polkadot-hackathon-2024

singapore/14-DotPoints/: .gitignore  README.md
singapore/14-DotPoints/src/contracts-evm/: Staking.sol  StakingToken.sol  package.json
singapore/14-DotPoints/src/contracts/Erc20/: Cargo.toml  lib.rs
singapore/14-DotPoints/src/contracts/IndividualStaking/: Cargo.toml  lib.rs
singapore/14-DotPoints/src/contracts/TokenContract/: Cargo.toml  lib.rs
singapore/14-DotPoints/src/contracts/staking_token/: Cargo.toml  lib.rs
