[package]
name = "TokenContract"
version = "5.0.0"
authors = ["[Arthur_Jacobina] <[email27arthur@gmail.com]>"]
edition = "2024"

[dependencies]
ink = { version = "5.0.0", default-features = false }

[dev-dependencies]
ink_e2e = { version = "5.0.0" }

[lib]
path = "lib.rs"

[features]
default = ["std"]
std = [
    "ink/std",
]
ink-as-dependency = []
e2e-tests = []
